TEST/EXCEPT-tests/exception_test_008.errout.GOLD
/workspaces/Pnut-ts-dev/TEST/EXCEPT-tests/exception_test_008.spin2:6:error:Expected a constant, unary operator, or "("
