TEST/EXCEPT-tests/exception_test_008.spin2
CON

' testing not PTR[ab] exception: pre-decrement
DAT

    rdlong 10, --pa